--- a/server/package.json
+++ b/server/package.json
@@ -2,18 +2,21 @@
   "name": "server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "start": "node app.js",
+    "start": "nodemon ./app.js localhost 5432",
     "dev": "supervisor app.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "nodemon": "^3.0.1",
     "pg": "^8.11.3",
-    "sequelize": "^6.32.1",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.33.0",
     "supervisor": "^0.12.0"
   }
 }
