--- a/server/package.json
+++ b/server/package.json
@@ -13,10 +13,13 @@
     "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "http-status-codes": "^2.2.0",
+    "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.0.1",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.33.0",
+    "sequelize-bcrypt": "^1.2.0",
     "supervisor": "^0.12.0"
   }
 }
