--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
+    "axios": "^1.5.0",
     "bootstrap": "^5.3.1",
     "moment": "^2.29.4",
     "react": "^18.2.0",
@@ -19,6 +20,7 @@
     "react-redux": "^8.1.2",
     "react-router": "^6.15.0",
     "react-router-dom": "^6.14.2",
+    "react-toastify": "^9.1.3",
     "styled-components": "^6.0.7"
   },
   "devDependencies": {
